--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Mi Wikipedia</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSkt4ur4Rd6EvnxN1Zw0xHgvrHXTzbxAKtdU8HgIC2y" crossorigin="anonymous">
     <link rel='stylesheet' href='css/myStyle.css'>
     <script src='js/main.js'></script>
     <script src='js/myScript.js'></script>
@@ -11,8 +12,7 @@
 
   <body>
     <div class='header'>
-      <h1>Proyecto Final</h1>
-      <h2>Mi Wikipedia</h2>
+      <h2>Wikipedia</h2>
     </div>
     <div id='menu'class='topnav'>
       <p onclick='showWelcome()'>Inicio</p>
@@ -29,7 +29,7 @@
           <h2>Universidad Nacional de San Agustin</h2>
           <p>Escuela Profesional de Ingeniería de Sistemas</p>
           <img src="css/LOGO_UNSA.png" alt="Universidad Nacional de San Agustin" style="width:100%; border-radius: 15px;">
-          <p>Autores: Renzo Geomar Mamani Quispe e Ysabel Alejandra Zambrano Cruz</p>
+          <p>Autor: Renzo Geomar Mamani Quispe</p>
         </div>
       </div>
     </div>
@@ -38,6 +38,8 @@
       <p class=owner id='userName' class='rightAlign'></p>
     </div>
   </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-QF1B4SxJ59DLcXiEI9ysRgQIVQeDjwoCJO2fxpPzY14gt53c4zBebZHtg9vjEF9w" crossorigin="anonymous"></script>
+  <script src="js/main.js"></script>
 </html>
 
   </body>
