--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Mi Wikipedia</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSkt4ur4Rd6EvnxN1Zw0xHgvrHXTzbxAKtdU8HgIC2y" crossorigin="anonymous">
+
     <link rel='stylesheet' href='css/myStyle.css'>
     <script src='js/main.js'></script>
     <script src='js/myScript.js'></script>
@@ -27,19 +27,18 @@
       <div class='rightcolumn'>
         <div class='card'>
           <h2>Universidad Nacional de San Agustin</h2>
-          <p>Escuela Profesional de Ingeniería de Sistemas</p>
+          <h4>Escuela Profesional de Ingeniería de Sistemas</h4>
           <img src="css/LOGO_UNSA.png" alt="Universidad Nacional de San Agustin" style="width:100%; border-radius: 15px;">
           <p>Autor: Renzo Geomar Mamani Quispe</p>
         </div>
       </div>
     </div>
     <div class='footer'>
-      <p>El contenido de esta página tiene licencia ...</p>
+      <p>El propietario de esta licencia es...</p>
       <p class=owner id='userName' class='rightAlign'></p>
     </div>
   </body>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-QF1B4SxJ59DLcXiEI9ysRgQIVQeDjwoCJO2fxpPzY14gt53c4zBebZHtg9vjEF9w" crossorigin="anonymous"></script>
-  <script src="js/main.js"></script>
+
 </html>
 
   </body>
